--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,6 @@ services:
             context: .
             dockerfile: Dockerfile
         # image: especializati/laravel9-app
-        restart: unless-stopped
         working_dir: /var/www/
         volumes:
             - ./:/var/www
@@ -19,9 +18,8 @@ services:
     # nginx
     nginx:
         image: nginx:alpine
-        restart: unless-stopped
         ports: 
-            - "8989:80"
+            - "${APP_PORT}:80"
         volumes: 
             - ./:/var/www
             - ./docker/nginx/:/etc/nginx/conf.d/
@@ -31,7 +29,6 @@ services:
     # db mysql
     mysql:
         image: mysql:5.7.22
-        restart: unless-stopped
         environment:
             MYSQL_DATABASE: ${DB_DATABASE}
             MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
@@ -40,14 +37,13 @@ services:
         volumes:
             - ./.docker/mysql/dbdata:/var/lib/mysql
         ports:
-            - "3388:3306"
+            - "${DB_FORWARD_PORT}:3306"
         networks:
             - laravel-9
 
     # queue
     queue:
         image: especializati/laravel9-app
-        restart: unless-stopped
         command: "php artisan queue:work"
         volumes:
             - ./:/var/www
