--- a/.env.example
+++ b/.env.example
@@ -1,30 +1,32 @@
-APP_NAME=Laravel
+APP_NAME="Laravel - Horizon"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Kw8lzmRmF0PcAvMj5b4gqAfk4xAQvT/hM/EniUM1dfo=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_PORT=
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
+DB_DATABASE=
+DB_USERNAME=
 DB_PASSWORD=
+DB_FORWARD_PORT=3302
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+QUEUE_CONNECTION=redis
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
