--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,8 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
+MAILHOG_SMTP_PORT=1025
+MAILHOG_WEB_PORT=8025
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
